syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sera.tutorial.spring.grpc.helloworld";
//option java_outer_classname = "HelloWorldProto";

service HelloWorldService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
  }
}

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
}

message HelloResponse {
  string message = 1;
}